feat: add internal transactions module, add endpoint to top up user balance
