# src/v1/users/dto/top-up-balance.dto.ts
@@ -1,0 +1,7 @@
+import { IsNotEmpty, IsNumber } from 'class-validator';
+
+export class TopUpBalanceDto {
+  @IsNotEmpty()
+  @IsNumber()
+  amount: number;
+}
